Ported Code to run on Linux

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,15 +3,24 @@
 # All rights reserved.
 #
 #
-TOPDIR = ../../..
-CFLAGS += -I$(TOPDIR)/mmesh/x509cache \
-          -I$(TOPDIR)/elliptic/src/headers
+#TOPDIR = ../../..
+CC=gcc
+CFLAGS =  -g -I.. -I/usr/include/openssl  -static
+LDFLAGS = -L.. -lx509cache -lcrypto -lpthread -ldl -lssl
 
 
 TARGET = x509cache
 
 C_SRCS =	x509cache.c
 
+OBJS = x509cache.o
 
-include ../libs.mk
-include $(BUILD_ROOT)/mk/rules.mk
+$(TARGET):$(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) $(LDFLAGS) -o $@ 
+
+$(OBJS):$(C_SRCS)
+	$(CC) -c $< $(CFLAGS) -o $@ 
+
+clean:
+	-rm -f *.o
+	-rm -f $(TARGET)
